--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "host": "127.0.0.1",
   "port": 3306,
-  "user": "your_db_user",
-  "password": "your_password",
+  "user": "root",
+  "password": "ascent",
   "database": "world",
   "charset": "utf8mb4"
 }
