--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "host": "127.0.0.1",
   "port": 3306,
   "user": "root",
-  "password": "yourpassword",
+  "password": "your_password",
   "database": "world",
   "charset": "utf8mb4"
 }
